added catalog and perfume info servlets